--- a/assets/stylesheets/index.css.sass
+++ b/assets/stylesheets/index.css.sass
@@ -1,4 +1,4 @@
-// @import 'node_modules/bulma/bulma'
+@import 'node_modules/bulma/bulma'
 // @import 'node_modules/animate.css/animate.min'
 @import 'variables'
 @import 'header'
