--- a/assets/stylesheets/index.css.sass
+++ b/assets/stylesheets/index.css.sass
@@ -1,5 +1,5 @@
 @import 'node_modules/bulma/bulma'
-// @import 'node_modules/animate.css/animate.min'
+@import 'node_modules/animate.css/animate.min'
 @import 'variables'
 @import 'header'
 @import 'flight'
