--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,12 +6,15 @@
       {{ .Site.Title }}
     {{ end }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <script type="text/javascript" src=" {{ .Site.BaseURL }}{{ if eq (getenv "APP_ENV") "dev" }}main.js{{ else }}{{ index .Site.Data.manifest "main.js" | relURL }}{{ end }}"></script>
+    <script src="{{ .Site.BaseURL }}{{ if eq (getenv "APP_ENV") "dev" }}bundle.js{{ else }}{{ index .Site.Data.manifest "bundle.js" | relURL }}{{ end }}"></script>
+
   </head>
   <body>
     {{ partial "header.html" . }}
     {{ block "main" . }}
     {{ end }}
     {{ partial "footer.html" . }}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.0.1/instantclick.js" data-no-instant></script>
+    <script data-no-instant>InstantClick.init();</script>
   </body>
 </html>
