--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -1,16 +1,17 @@
 {{ define "main" }}
-  <h1>豊橋市を中心にWEBアプリケーション・ホームページ制作を親身になって制作するlightly</h1>
-  <div class="columns">
+<div id="welcome">
+  <h1>豊橋・豊川を中心に分かりやすい料金でWEB開発・ホームページ制作できるlightlyのサイトです！</h1>
+  <div class="columns is-multiline">
     {{ range where .Pages "Section" "blog" }}
-    <div class="column is-narrow is-4">
+    <div class="column is-4">
       <a href="{{.Permalink}}">
         <div class="card">
           <div class="card-image">
-            <figure class="image is-4by3">
+            <figure class="image">
               {{ if .Params.Image }}
                 <img src="{{ .Params.Image }}">
               {{ else }}
-                <img src="https://bulma.io/images/placeholders/1280x960.png">
+                <img src="{{ .Site.BaseURL }}/images/blank.png">
               {{ end }}
             </figure>
           </div>
@@ -21,7 +22,6 @@
               </div>
             </div>
             <div class="content">
-              {{ .Content }}
               <time datetime="{{.Date.Format "2006-01-02"}}">{{.Date.Format "2006-01-02"}}</time>
             </div>
           </div>
@@ -30,8 +30,60 @@
     </div>
     {{ end }}
   </div>
-    <article>
-      <h2></h2>
-      {{ .Content }}
-    </article>
+  <h2><span>WEB制作・ホームページ制作などの料金について</span></h2>
+  <div class="columns">
+    <div class="column">
+      <img src="https://placehold.it/300x300.png">
+    </div>
+    <div class="column">
+      <img src="">
+    </div>
+  </div>
+  <h2><span>今までに制作したサービスやサイトなど</span></h2>
+  <div class="tile is-ancestor">
+    <div class="tile is-vertical is-8">
+      <div class="tile">
+        <div class="tile is-parent is-vertical">
+          <article class="tile is-child notification is-primary">
+            <p class="title">Vertical...</p>
+            <p class="subtitle">Top tile</p>
+          </article>
+          <article class="tile is-child notification is-warning">
+            <p class="title">...tiles</p>
+            <p class="subtitle">Bottom tile</p>
+          </article>
+        </div>
+        <div class="tile is-parent">
+          <article class="tile is-child notification is-info">
+            <p class="title">Middle tile</p>
+            <p class="subtitle">With an image</p>
+            <figure class="image is-4by3">
+              <img src="https://bulma.io/images/placeholders/640x480.png">
+            </figure>
+          </article>
+        </div>
+      </div>
+      <div class="tile is-parent">
+        <article class="tile is-child notification is-danger">
+          <p class="title">Wide tile</p>
+          <p class="subtitle">Aligned with the right tile</p>
+          <div class="content">
+            <!-- Content -->
+          </div>
+        </article>
+      </div>
+    </div>
+    <div class="tile is-parent">
+      <article class="tile is-child notification is-success">
+        <div class="content">
+          <p class="title">Tall tile</p>
+          <p class="subtitle">With even more content</p>
+          <div class="content">
+            <!-- Content -->
+          </div>
+        </div>
+      </article>
+    </div>
+  </div>
+</div>
 {{ end }}
