とりあえずイメージできるまで作成

--- a/assets/stylesheets/variables.sass
+++ b/assets/stylesheets/variables.sass
@@ -22,3 +22,9 @@ $smartphone_width: 414px
 =fadein($time)
   opacity: 0
   animation: transparent 0.5s ease $time 1 forwards
+
+.main_container
+  display: inherit
+  margin: 0 auto
+  width: 100%
+  max-width: $pc_width
