indexのメインページの画像を追加

--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -1,6 +1,119 @@
 {{ define "main" }}
 <div id="welcome">
-  <h1>豊橋・豊川を中心に分かりやすい料金でWEB開発・ホームページ制作できるlightlyのサイトです！</h1>
+  <h1>豊橋・豊川を中心に、分かりやすい料金で顧問エンジニア・WEB開発・ホームページ制作を頼めるlightly</h1>
+  <div class="columns is-multiline">
+    <div class="column is-4">
+      <a href="/about">
+        <div class="card">
+          <div class="card-image">
+            <figure class="image">
+<svg version="1.1" id="" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+	y="0px" width="1110px" height="465px" viewBox="0 0 1110 465" enable-background="new 0 0 1110 465" xml:space="preserve">
+<rect fill="url(#SVGID_1_)" width="1110" height="465"/>
+<path fill="#ff7675" d="M554.722,406.312L380.477,232.066c-39.536-39.536-39.536-103.635,0-143.17
+	c39.535-39.536,103.635-39.536,143.17,0l31.075,31.075l31.63-31.631c39.535-39.535,103.635-39.536,143.171,0
+	c39.535,39.536,39.535,103.635-0.001,143.17L554.722,406.312z"/>
+</svg>
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="media">
+              <div class="media-content">
+                <p class="link title">lightlyが大切にしたいこと</p>
+              </div>
+            </div>
+            <div class="content">
+              <p>無駄なことを省き、本当に必要なものだけを提供します。</p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="column is-4">
+      <a href="/about">
+        <div class="card">
+          <div class="card-image">
+            <figure class="image">
+<svg version="1.1" id="" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+	y="0px" width="1110px" height="465px" viewBox="0 0 1110 465" enable-background="new 0 0 1110 465" xml:space="preserve">
+<path fill="#5BE3A6" d="M287.54,200.042c-19.104,0-34.983,13.763-38.291,31.913h-97.646c-3.036-10.39-12.627-17.982-23.997-17.982
+	c-13.81,0-25.004,11.195-25.004,25.004s11.195,25.003,25.004,25.003c11.371,0,20.962-7.592,23.998-17.981h97.646
+	c3.308,18.148,19.186,31.912,38.29,31.912c21.503,0,38.934-17.433,38.934-38.935C326.474,217.474,309.043,200.042,287.54,200.042z"
+	/>
+<path fill="#56C7FF" d="M447.096,200.043c-19.104,0-34.983,13.763-38.291,31.913H311.16c-3.036-10.389-12.627-17.982-23.998-17.982
+	c-13.81,0-25.004,11.195-25.004,25.003c0,13.811,11.195,25.004,25.004,25.004c11.371,0,20.962-7.592,23.998-17.982h97.645
+	c3.308,18.148,19.187,31.912,38.291,31.912c21.503,0,38.935-17.432,38.935-38.934C486.03,217.474,468.599,200.043,447.096,200.043z"
+	/>
+<path fill="#9522EC" d="M607.163,200.042c-19.104,0-34.983,13.763-38.291,31.913h-97.645c-3.036-10.39-12.627-17.982-23.997-17.982
+	c-13.81,0-25.004,11.195-25.004,25.004c0,13.811,11.195,25.004,25.004,25.004c11.371,0,20.962-7.592,23.998-17.982h97.645
+	c3.308,18.148,19.187,31.912,38.291,31.912c21.503,0,38.935-17.432,38.935-38.934C646.098,217.474,628.666,200.042,607.163,200.042z
+	"/>
+<path fill="#D61B74" d="M767.101,200.043c-19.104,0-34.983,13.763-38.291,31.913h-97.645c-3.035-10.389-12.627-17.982-23.997-17.982
+	c-13.811,0-25.005,11.195-25.005,25.003c0,13.811,11.194,25.004,25.005,25.004c11.37,0,20.962-7.592,23.997-17.982h97.645
+	c3.308,18.148,19.187,31.912,38.291,31.912c21.503,0,38.935-17.432,38.935-38.934C806.035,217.474,788.604,200.043,767.101,200.043z
+	"/>
+<path fill="#FF254D" d="M927.572,200.043c-19.104,0-34.983,13.763-38.291,31.913h-97.645c-3.035-10.389-12.627-17.982-23.997-17.982
+	c-13.811,0-25.005,11.195-25.005,25.003c0,13.811,11.194,25.004,25.005,25.004c11.37,0,20.962-7.592,23.997-17.982h97.645
+	c3.308,18.148,19.187,31.912,38.291,31.912c21.503,0,38.935-17.432,38.935-38.934C966.507,217.474,949.075,200.043,927.572,200.043z
+	"/>
+</svg>
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="media">
+              <div class="media-content">
+                <p class="link title">システムやサイトは生きていますか？</p>
+              </div>
+            </div>
+            <div class="content">
+              <p>セキュリティ、スマホ対応、クラウド化。時代に合わせたシステムやサイトになっていますか？</p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="column is-4">
+      <a href="/about">
+        <div class="card">
+          <div class="card-image">
+            <figure class="image">
+<svg version="1.1" id="" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+	y="0px" width="1110px" height="465px" viewBox="0 0 1110 465" enable-background="new 0 0 1110 465" xml:space="preserve">
+<rect x="404.466" y="204.775" fill="#98FFB5" width="164.53" height="84.183"/>
+<polygon fill="#9AECDB" points="582.088,93.074 582.088,46.267 490.606,46.267 490.606,69.67 455.448,69.67 455.448,108.431 
+	417.603,108.431 417.603,158.419 378.082,158.419 378.082,223.078 326.276,223.078 326.276,340.425 555.623,340.425 
+	555.623,223.078 542.611,223.078 542.611,174.414 546.561,174.414 546.561,108.431 544.438,108.431 544.438,93.074 "/>
+<polygon fill="#2ACC9F" points="555.454,223.077 555.454,204.774 542.611,204.774 542.611,174.414 546.561,174.414 546.561,108.431 
+	544.438,108.431 544.438,69.67 499.944,69.67 499.944,108.431 482.082,108.431 482.082,158.419 460.346,158.419 460.346,204.774 
+	413,204.774 413,288.958 440.949,288.958 440.949,340.425 555.623,340.425 555.623,223.077 "/>
+<polygon fill="#E2A16B" points="595.379,418.733 551.987,108.431 527.036,108.431 506.195,243.907 471.671,227.29 460.347,237.209 
+	501.875,271.997 479.302,418.733 "/>
+<polygon fill="#9AECDB" points="735.543,226.818 735.543,132.748 646.688,132.748 646.688,92.436 627.83,92.436 627.83,69.032 
+	536.345,69.032 536.345,92.436 517.728,92.436 517.728,158.419 529.57,158.419 529.57,238.137 568.996,238.137 568.996,336.686 
+	783.725,336.686 783.725,226.818 "/>
+<polygon fill="#2ACC9F" points="735.543,226.817 735.543,132.748 646.688,132.748 646.688,92.436 627.83,92.436 627.83,69.032 
+	582.088,69.032 582.088,46.267 536.345,46.267 536.345,93.074 555.622,93.074 555.622,115.839 582.209,115.839 582.209,158.419 
+	632.555,158.419 632.555,238.137 676.357,238.137 676.357,336.686 783.725,336.686 783.725,226.817 "/>
+</svg>
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="media">
+              <div class="media-content">
+                <p class="link title">作りっぱなしの制作会社とは違います</p>
+              </div>
+            </div>
+            <div class="content">
+              <p>「サイトが完成しました。後はお客様が自由に更新できます」そんな体制になっていませんか？</p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="h2_wrap">
+    <h2>こんなお仕事しました！＆ウェブと仕事に関する便利記事</h2>
+  </div>
   <div class="columns is-multiline">
     {{ range where .Pages "Section" "blog" }}
     <div class="column is-4">
@@ -18,7 +131,7 @@
           <div class="card-content">
             <div class="media">
               <div class="media-content">
-                <p class="title">{{ .Title }}</p>
+                <p class="link title">{{ .Title }}</p>
               </div>
             </div>
             <div class="content">
@@ -30,7 +143,9 @@
     </div>
     {{ end }}
   </div>
-  <h2><span>WEB制作・ホームページ制作などの料金について</span></h2>
+  <div class="h2_wrap">
+    <h2>WEB制作・ホームページ制作などの料金について</h2>
+  </div>
   <div class="columns">
     <div class="column">
       <img src="https://placehold.it/300x300.png">
@@ -39,7 +154,9 @@
       <img src="">
     </div>
   </div>
-  <h2><span>今までに制作したサービスやサイトなど</span></h2>
+  <div class="h2_wrap">
+    <h2>今までに制作したサービスやサイトなど</h2>
+  </div>
   <div class="tile is-ancestor">
     <div class="tile is-vertical is-8">
       <div class="tile">
