--- a/assets/stylesheets/welcome.sass
+++ b/assets/stylesheets/welcome.sass
@@ -1,30 +1,35 @@
 #welcome
   h1
-    border-top: 1px solid #c5c5c5
-    border-bottom: 1px solid #c5c5c5
     padding: 10px
-    margin: 30px 0 50px
+    margin: 60px 0
     text-align: center
-  h2
-    margin: 50px 0 30px
+    font-size: 120%
+  .h2_wrap
     text-align: center
-    span
+    h2
       position: relative
       display: inline-block
-      padding-bottom: 0.5em
-      border-bottom: 1px solid black
-      &::before, &::after 
-        position: absolute
-        top: 100%
-        left: 50%
-        transform: translateX(-50%)
+      padding: 0 45px
+      margin: 60px 0
+      &:before, &:after
         content: ''
-        border: 10px solid transparent
-      &::before
-        border-top: 10px solid black
-      &::after
-        margin-top: -1px
-        border-top: 10px solid white
+        position: absolute
+        top: 50%
+        display: inline-block
+        width: 44px
+        height: 1px
+        background-color: #b6babb
+        -moz-transform: rotate(-60deg)
+        -webkit-transform: rotate(-60deg)
+        -ms-transform: rotate(-60deg)
+        transform: rotate(-60deg)
+      &:before
+        left: 0
+      &:after
+        right: 0
+
+.link
+  color: #3c75ff
 
 section
   width: 85vw
