ファーストビューの作成

--- a/assets/stylesheets/header.sass
+++ b/assets/stylesheets/header.sass
@@ -19,14 +19,15 @@ header
       width: auto
   .menu
     .contact_button
-      +background-gradation(200deg, #62f8ff, #6268ff)
+      +background-gradation(20deg, #62c5ff, #6fe0f3)
       padding: 1px
       border-radius: 500px
       display: inline-block
       span
-        background-color: #fff
+        // background-color: #fff
         padding: ($header_height/10) ($header_height/3)
         border-radius: 500px
         display: inline-block
         font-size: ($header_height/2)
-        color: $brand_grad
+        font-weight: bold
+        color: #fff
