--- a/assets/stylesheets/variables.sass
+++ b/assets/stylesheets/variables.sass
@@ -1,7 +1,7 @@
-$brand_color: #629cff
-$brand_grad: linear-gradient(200deg, $brand_color, adjust-hue($brand_color, 20%))
+$brand_color: #972AFF
+$brand_grad: linear-gradient(20deg, $brand_color, adjust-hue($brand_color, 20%))
 
-=background-gradation($angle: 180deg, $color-a: #0bd, $color-b: 20%)
+=background-gradation($angle: 20deg, $color-a: $brand_color, $color-b: 20%)
   background: linear-gradient($angle, $color-a, $color-b)
 
 $pc_width: 1120px
