--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -1,6 +1,12 @@
 {{ define "main" }}
 <div id="welcome">
-  <h1>豊橋・豊川を中心に、分かりやすい料金で顧問エンジニア・WEB開発・ホームページ制作を頼めるlightly</h1>
+  <p class="first_message">より軽く・早く<br>お客様の創りたいをお手伝いします</p>
+  <div class="first_view">
+    <div class="svg_wrapper">
+      {{ partial "hero.svg" . }}
+    </div>
+  </div>
+  <h1>豊橋・豊川を中心に、分かりやすい料金で顧問エンジニア・WEB開発・ホームページ制作をしています :)</h1>
   <div class="columns is-multiline">
     <div class="column is-4">
       <a href="/about">
