--- a/assets/stylesheets/welcome.sass
+++ b/assets/stylesheets/welcome.sass
@@ -19,14 +19,37 @@
         width: 44px
         height: 1px
         background-color: #b6babb
-        -moz-transform: rotate(-60deg)
-        -webkit-transform: rotate(-60deg)
-        -ms-transform: rotate(-60deg)
         transform: rotate(-60deg)
       &:before
         left: 0
       &:after
         right: 0
+  .first_message
+    background: -webkit-linear-gradient(20deg, #972AFF, #3FC6FF)
+    -webkit-background-clip: text
+    -webkit-text-fill-color: transparent
+    font-size: calc(3em - 3vw)
+    @media screen and (min-width: 769px)
+      font-size: 3em
+    font-weight: bold
+    width: 80%
+    margin: 0 auto
+    margin-top: 50px
+    text-align: center
+  .first_view
+    max-width: 1120px
+    margin: auto
+    .svg_wrapper
+      position: relative
+      width: 100%
+      padding-top: calc(500 / 1200 * 100%)
+      svg
+        display: block
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
 
 .link
   color: #3c75ff
@@ -58,7 +81,7 @@ section
         .title
           font-size: 1rem
 
-.first_view
+.qa_view
   height: 50vh
   // PC
   @media screen and (min-width: $tablet_width + 1px)
