--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div id="welcome">
-  <p class="first_message">より軽く・早く<br>お客様の創りたいをお手伝いします</p>
+  <p class="first_message">より軽く・早く<br>創りたいをお手伝いします</p>
   <div class="first_view">
     <div class="svg_wrapper">
       {{ partial "hero.svg" . }}
