Fix syntax error

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,7 +18,7 @@
         <a class="navbar-item" href="/">
           スタッフ
         </a>
-        <a class="navbar-item" href="/"">
+        <a class="navbar-item" href="/">
           ブログ
         </a>
         <div class="navbar-item">
