--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,7 +4,7 @@
   {{ if .Params.Image }}
     <img src="{{ .Params.Image }}">
   {{ else }}
-    <img src="{{ .Site.BaseURL }}/images/blank.png">
+    {{ partial "blank.svg" .}}
   {{ end }}
   <h1 class="title">{{ .Title }}</h1>
   {{ .Content }}
