--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,6 +7,11 @@
     {{ partial "blank.svg" .}}
   {{ end }}
   <h1 class="title">{{ .Title }}</h1>
+  <nav>
+    <div>{{ dateFormat "2006年1月2日" .Date }}</div>
+    {{ with .Params.categories }}<div>カテゴリー:{{ range . }} <a href="/categories/{{ . | urlize }}/">{{ . }}</a>{{ end }}</div>{{ end }}
+    {{ with .Params.tags }}<div>タグ:{{ range . }} <a href="/tags/{{ . | urlize }}/">#{{ . }}</a>{{ end }}</div>{{ end }}
+  </nav>
   {{ .Content }}
   </article>
 {{ end }}
