--- a/assets/stylesheets/header.sass
+++ b/assets/stylesheets/header.sass
@@ -18,7 +18,7 @@ header
       height: $header_height
       width: auto
   .contact_button
-    +background-gradation(20deg, #62c5ff, #6fe0f3)
+    +background-gradation(20deg, $blue_color, lighten($blue_color, 18%))
     padding: 1px
     border-radius: 500px
     display: inline-block
