--- a/assets/stylesheets/single.sass
+++ b/assets/stylesheets/single.sass
@@ -1,16 +1,29 @@
-.blog
+.single
   display: inherit
   margin: 0 auto
   width: 100%
   max-width: 800px
   *
     margin-bottom: 2rem
+  nav
+    display: flex
+    flex-wrap: wrap
+    div
+      margin-right: 1rem
+    .category_list, .tag_list
+      a
+        background-color: lighten($link_color, 7%)
+        color: #fff
+        padding: 2px 5px
+        border-radius: 2px
+        font-weight: bold
+    .tag_list
   h1
-    font-size: 3rem
-    text-align: center
+    font-size: 2rem
   h2
     font-size: 2rem
     padding: 0 1em
     text-align: center
   p
     font-size: 18px
+  
