--- a/assets/stylesheets/welcome.sass
+++ b/assets/stylesheets/welcome.sass
@@ -25,7 +25,7 @@
       &:after
         right: 0
   .first_message
-    background: -webkit-linear-gradient(20deg, #972AFF, #3FC6FF)
+    background: -webkit-linear-gradient(20deg, $purple_color, $blue_color)
     -webkit-background-clip: text
     -webkit-text-fill-color: transparent
     font-size: calc(3em - 3vw)
@@ -51,8 +51,6 @@
         width: 100%
         height: 100%
 
-.link
-  color: #3c75ff
 
 section
   width: 85vw
@@ -80,6 +78,8 @@ section
       .media-content
         .title
           font-size: 1rem
+  .link
+    color: $link_color
 
 .qa_view
   height: 50vh
