--- a/assets/stylesheets/welcome.sass
+++ b/assets/stylesheets/welcome.sass
@@ -75,11 +75,17 @@ section
   .card-content
     padding: 8px
     .media
+      margin: 0
       .media-content
         .title
           font-size: 1rem
-  .link
-    color: $link_color
+    .link
+      color: $link_color
+    .content
+      time
+        color: #676767
+        font-size: 80%
+      p
 
 .qa_view
   height: 50vh
