メタデータのデザインを変更

--- a/assets/stylesheets/welcome.sass
+++ b/assets/stylesheets/welcome.sass
@@ -78,13 +78,15 @@ section
       margin: 0
       .media-content
         .title
-          font-size: 1rem
+          font-size: 1.2rem
     .link
       color: $link_color
     .content
       time
         color: #676767
         font-size: 80%
+        display: block
+        margin: 5px 0
       p
 
 .qa_view
