--- a/assets/stylesheets/single.sass
+++ b/assets/stylesheets/single.sass
@@ -12,10 +12,7 @@
       margin-right: 1rem
     .category_list, .tag_list
       a
-        background-color: lighten($link_color, 7%)
-        color: #fff
-        padding: 2px 5px
-        border-radius: 2px
+        color: lighten($link_color, 7%)
         font-weight: bold
     .tag_list
   h1
