--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -9,7 +9,7 @@
   <h1>豊橋・豊川を中心に、分かりやすい料金で顧問エンジニア・WEB開発・ホームページ制作をしています :)</h1>
   
   <div id="particular">
-    {{ partial "index/particular.html" . }}
+    <!-- {{ partial "index/particular.html" . }} -->
   </div>
 
   <div id="posts">
