--- a/layouts/partials/index/particular.html
+++ b/layouts/partials/index/particular.html
@@ -1,4 +1,4 @@
-<div class="columns is-multiline is-hidden">
+<div class="columns is-multiline">
   <div class="column is-4">
     <a href="/about">
       <div class="card">
