ポリシーを本番用に更新

--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -1,12 +1,12 @@
 {{ define "main" }}
 <div id="welcome">
-  <p class="first_message">より軽く・早く<br>創りたいをお手伝いします</p>
+  <p class="first_message">Move lightly, and quickly</p>
   <div class="first_view">
     <div class="svg_wrapper">
       {{ partial "hero.svg" . }}
     </div>
   </div>
-  <h1>豊橋・豊川を中心に、分かりやすい料金で顧問エンジニア・WEB開発・ホームページ制作をしています :)</h1>
+  <h1>愛知県豊橋市でWEB開発・ホームページ制作をしています :)</h1>
   
   <div id="particular">
     <!-- {{ partial "index/particular.html" . }} -->
