--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,10 +16,10 @@
     <div id="header_menu" class="navbar-menu">
       <div class="navbar-end">
         <a class="navbar-item" href="/">
-          スタッフ
+          About
         </a>
         <a class="navbar-item" href="/">
-          ブログ
+          Blog
         </a>
         <div class="navbar-item">
           <div class="field is-grouped">
