--- a/assets/stylesheets/welcome.sass
+++ b/assets/stylesheets/welcome.sass
@@ -28,11 +28,11 @@
     background: -webkit-linear-gradient(20deg, $purple_color, $blue_color)
     -webkit-background-clip: text
     -webkit-text-fill-color: transparent
-    font-size: calc(3em - 3vw)
+    font-size: calc(4em - 3vw)
     @media screen and (min-width: 769px)
-      font-size: 3em
-    font-weight: bold
-    width: 80%
+      font-size: 5.5em
+    font-weight: 200
+    width: 90%
     margin: 0 auto
     margin-top: 50px
     text-align: center
