titleカラー変更

--- a/assets/stylesheets/variables.sass
+++ b/assets/stylesheets/variables.sass
@@ -1,8 +1,8 @@
-$red_color: #EF6461
+$red_color: #ff5746
 $blue_color: #3FC6FF
 $purple_color: #972AFF
 $green_color: #17dbd6
-$yellow_color: #FFD147
+$yellow_color: #fff254
 
 $brand_color: $blue_color
 $brand_grad: linear-gradient(20deg, $brand_color, adjust-hue($brand_color, 20%))
