--- a/assets/stylesheets/welcome.sass
+++ b/assets/stylesheets/welcome.sass
@@ -25,7 +25,7 @@
       &:after
         right: 0
   .first_message
-    background: -webkit-linear-gradient(20deg, $purple_color, $blue_color)
+    background: -webkit-linear-gradient(20deg, $red_color, $yellow_color)
     -webkit-background-clip: text
     -webkit-text-fill-color: transparent
     font-size: calc(4em - 3vw)
