--- a/assets/stylesheets/single.sass
+++ b/assets/stylesheets/single.sass
@@ -3,8 +3,6 @@
   margin: 0 auto
   width: 100%
   max-width: 800px
-  *
-    margin-bottom: 2rem
   nav
     display: flex
     flex-wrap: wrap
@@ -15,8 +13,11 @@
         color: lighten($link_color, 7%)
         font-weight: bold
     .tag_list
-  h1
+  h1, h2, h3, h4, h5, h6, p, nav
+    margin-bottom: 2rem
+  .title
     font-size: 2rem
+    margin: 2rem 0
   h2
     font-size: 2rem
     padding: 0 1em
