--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,7 +15,7 @@
 
     <div id="header_menu" class="navbar-menu">
       <div class="navbar-end">
-        <a class="navbar-item" href="/">
+        <a class="navbar-item" href="/about">
           About
         </a>
         <a class="navbar-item" href="/">
