--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,7 +18,7 @@
         <a class="navbar-item" href="/about">
           About
         </a>
-        <a class="navbar-item" href="/">
+        <a class="navbar-item" href="/blog">
           Blog
         </a>
         <div class="navbar-item">
