タイトルなどを若干変更

--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -14,7 +14,7 @@
 
   <div id="posts">
     <div class="h2_wrap">
-      <h2>こんなお仕事しました！＆ウェブと仕事に関する便利記事</h2>
+      <h2>ウェブとEC、技術に関するブログ</h2>
     </div>
     <div class="columns is-multiline">
       {{ range where .Pages "Section" "blog" }}
