お問い合わせページ作成

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -25,7 +25,7 @@
           <div class="field is-grouped">
             <p class="control">
               <a class="contact_button" href="/contact">
-                <span>お問い合わせ</span>
+                <span>Contact</span>
               </a>
             </p>
           </div>
