--- a/assets/stylesheets/welcome.sass
+++ b/assets/stylesheets/welcome.sass
@@ -51,7 +51,6 @@
         width: 100%
         height: 100%
 
-
 section
   width: 85vw
   max-width: 800px
@@ -160,3 +159,8 @@ section
   .as_light_as
     margin-top: 30px
   .slide
+
+#posts
+  .to_page_list
+    text-align: center
+    display: block
