--- a/assets/stylesheets/index.css.sass
+++ b/assets/stylesheets/index.css.sass
@@ -3,8 +3,10 @@
 @import 'variables'
 @import 'custom'
 @import 'header'
+@import 'footer'
 @import 'flight'
 @import 'welcome'
+@import 'pagination'
 @import 'single'
 @import 'article'
 @import 'about'
