--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -17,35 +17,11 @@
       <h2>ウェブとEC、技術に関するブログ</h2>
     </div>
     <div class="columns is-multiline">
-      {{ range where .Pages "Section" "blog" }}
-      <div class="column is-4">
-        <a href="{{.Permalink}}">
-          <div class="card">
-            <div class="card-image">
-              <figure class="image">
-                {{ if .Params.Image }}
-                  <img src="{{ .Params.Image }}">
-                {{ else }}
-                  {{ partial "blank.svg" .}}
-                {{ end }}
-              </figure>
-            </div>
-            <div class="card-content">
-              <div class="media">
-                <div class="media-content">
-                  <p class="link title">{{ .Title }}</p>
-                </div>
-              </div>
-              <div class="content">
-                <time datetime="{{ .Date.Format "2006年1月2日" }}">{{ .Date.Format "2006年1月2日" }}</time>
-                <p>{{ .Summary | plainify }}</p>
-              </div>
-            </div>
-          </div>
-        </a>
-      </div>
+      {{ range where (.Paginator 10).Pages "Section" "blog" }}
+        {{ .Render "pagelist" }}
       {{ end }}
     </div>
+    <a href="/blog" class="to_page_list">ブログの記事一覧はこちら</a>
   </div>
 
   <div id="pricing">
